--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -21,8 +21,9 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <!--[mode]="(isHandset$ | async) ? 'over' : 'side'"-->
     <mat-nav-list>
-      <a mat-list-item href="#"><span matBadge="4" matBadgeOverlap="false" matBadgeColor="accent">Dataviz</span></a>
-      <a mat-list-item href="#">Documents</a>
+      <a mat-list-item routerLink="/search" href="#">Search</a>
+      <a mat-list-item routerLink="/dataviz" href="#"><span matBadge="4" matBadgeOverlap="false" matBadgeColor="accent">Dataviz</span></a>
+      <a mat-list-item routerLink="/document" href="#">Documents</a>
     </mat-nav-list>
     <button
         type="button"
@@ -34,8 +35,8 @@
       </button>
   </mat-sidenav>
   <mat-sidenav-content class="nav-content">
-
-    <app-search></app-search>
-
+     <router-outlet></router-outlet>
+    <!--  <app-search></app-search> -->
+    
   </mat-sidenav-content>
 </mat-sidenav-container>
