--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -8,10 +8,9 @@
 		  <span class="example-fill-remaining-space"></span>
     </mat-toolbar>
 
-    <span>This is the content</span>
     <form>
       <mat-form-field>
         <input type="text" matInput [formControl]="searchCtrl" placeholder="Search">
       </mat-form-field>
-      <button mat-button>Click me!</button>
+      <button mat-button (click)="doSearch()" aria-label="Perform Click">Click me!</button>
     </form>
