--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -23,6 +23,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/search" href="#">Search</a>
       <a mat-list-item routerLink="/dataviz" href="#"><span matBadge="4" matBadgeOverlap="false" matBadgeColor="accent">Dataviz</span></a>
+      <a mat-list-item routerLink="/entreprise" href="#">Entreprise</a>
       <a mat-list-item routerLink="/document" href="#">Documents</a>
     </mat-nav-list>
     <button
