--- a/src/app/entreprise-list/entreprise-list.component.html
+++ b/src/app/entreprise-list/entreprise-list.component.html
@@ -1,6 +1,27 @@
 <h1>Entreprises</h1>
+<table mat-table [dataSource]="dataSource">
+	<!-- Name Column -->
+	<ng-container matColumnDef="entreprise">
+	  <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+	  <td mat-cell *matCellDef="let entreprise"> {{entreprise.entreprise}} </td>
+	</ng-container>
+
+	<!-- Context Column -->
+	<ng-container matColumnDef="context">
+	  <th mat-header-cell *matHeaderCellDef> Context </th>
+	  <td mat-cell *matCellDef="let entreprise"> {{entreprise.context}} </td>
+	</ng-container>
+
+	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+	
+	</table>
+	<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+	<hr />abcd<hr>
 <div *ngFor="let entreprise of entreprises" style="width: 300px;">
-	<entreprise-details [entreprise]='entreprise'></entreprise-details>
+	<!-- <entreprise-details [entreprise]='entreprise'></entreprise-details> -->
+	{{entreprise.entreprise}} -  {{entreprise.context}}
 </div>
 <div style="margin-top:20px;">
 	<button type="button" class="button btn-danger" (click)='deleteEntreprises()'>Delete All</button>
