--- a/src/app/entreprise-list/entreprise-list.component.html
+++ b/src/app/entreprise-list/entreprise-list.component.html
@@ -1,28 +1,33 @@
 <h1>Entreprises</h1>
-<table mat-table [dataSource]="dataSource">
-	<!-- Name Column -->
-	<ng-container matColumnDef="entreprise">
-	  <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-	  <td mat-cell *matCellDef="let entreprise"> {{entreprise.entreprise}} </td>
-	</ng-container>
 
-	<!-- Context Column -->
-	<ng-container matColumnDef="context">
-	  <th mat-header-cell *matHeaderCellDef> Context </th>
-	  <td mat-cell *matCellDef="let entreprise"> {{entreprise.context}} </td>
-	</ng-container>
+<mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
 
-	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-	
+<div class="mat-elevation-z2">
+	<table mat-table matSort [dataSource]="dataSource">
+		<!-- Name Column -->
+		<ng-container matColumnDef="entreprise">
+			<th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+			<td mat-cell *matCellDef="let entreprise"> {{entreprise.entreprise}} </td>
+		</ng-container>
+
+		<!-- Context Column -->
+		<ng-container matColumnDef="context">
+			<th mat-header-cell *matHeaderCellDef mat-sort-header> Context </th>
+			<td mat-cell *matCellDef="let entreprise"> {{entreprise.context}} </td>
+		</ng-container>
+
+		<!-- Descriptif Column -->
+		<ng-container matColumnDef="descriptif">
+			<th mat-header-cell *matHeaderCellDef mat-sort-header> Descriptif </th>
+			<td mat-cell *matCellDef="let entreprise"> {{entreprise.descriptif}} </td>
+		</ng-container>
+
+		<tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+		
 	</table>
-	<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+	<mat-paginator [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
 
-	<hr />abcd<hr>
-<div *ngFor="let entreprise of entreprises" style="width: 300px;">
-	<!-- <entreprise-details [entreprise]='entreprise'></entreprise-details> -->
-	{{entreprise.entreprise}} -  {{entreprise.context}}
-</div>
-<div style="margin-top:20px;">
-	<button type="button" class="button btn-danger" (click)='deleteEntreprises()'>Delete All</button>
 </div>
