--- a/src/app/entreprise-list/entreprise-list.component.css
+++ b/src/app/entreprise-list/entreprise-list.component.css
@@ -1,10 +1,19 @@
 table {
-  width: 100%;
+  width: 90%;
 }
-
+/*
 td {
 	width: 250px; 
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+*/
+
+td.mat-column-descriptif {
+	width: 70%;
+	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width:1px;
 }
