--- a/src/app/entreprise-list/entreprise-list.component.html
+++ b/src/app/entreprise-list/entreprise-list.component.html
@@ -5,7 +5,18 @@
 </mat-form-field>
 
 <div class="mat-elevation-z2">
+	<div class="spinner-container" *ngIf="loading$ | async">
+        <mat-spinner></mat-spinner>
+	</div>
 	<table mat-table matSort matSortActive="entreprise" matSortDisableClear matSortDirection="asc" [dataSource]="dataSource">
+		<!-- Edit Button -->
+		<ng-container matColumnDef="edit">
+			<th mat-header-cell *matHeaderCellDef>
+			</th>
+			<td mat-cell *matCellDef="let row">
+				<button mat-button (click)="onEditButtonClick(row)" aria-label="Edit">Edit</button>
+			</td>
+		</ng-container>
 		<!-- Name Column -->
 		<ng-container matColumnDef="entreprise">
 			<th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
@@ -24,9 +35,9 @@
 			<td mat-cell *matCellDef="let entreprise"> {{entreprise.descriptif}} </td>
 		</ng-container>
 
-		<tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-		
+	<tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
 	</table>
 	<mat-paginator [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
 
