--- a/src/app/entreprise-details/entreprise-details.component.html
+++ b/src/app/entreprise-details/entreprise-details.component.html
@@ -1,19 +1,24 @@
-<div *ngIf="entreprise">
+<div *ngIf="entreprise | async">
+	<!-- <form [formGroup]="entrepriseForm" (submit)="onSubmit()">
+		<mat-form-field>
+			<input matInput placeholder="Name">
+		</mat-form-field>
+	</form> -->
 	<div>
-		<label>Name: </label> {{entreprise.entreprise}}
+		<label>Entreprise Name: </label> {{ (entreprise | async)?.entreprise}}
 	</div>
 	<div>
-		<label>Context: </label> {{entreprise.context}}
+		<label>Context: </label> {{(entreprise | async)?.context}}
 	</div>
 	<div>
-		<label>Description: </label> {{entreprise.descriptif}}
+		<label>Description: </label> {{ (entreprise | async)?.descriptif}}
+	</div>
+
+	<div>
+		<label>url: </label> {{ (entreprise | async)?.url}}
 	</div>
  
-	<span class="button is-small btn-primary" *ngIf='entreprise.active' (click)='updateActive(false)'>Inactive</span>
-	
-	<span class="button is-small btn-primary" *ngIf='!entreprise.active' (click)='updateActive(true)'>Active</span>
- 
-	<span class="button is-small btn-danger" (click)='deleteEntreprise()'>Delete</span>
-	
 	<hr/>
 </div>
+
+<button mat-button aria-label="Go Back" (click)="goBack()">Go back</button>
