--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -21,10 +21,15 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <!--[mode]="(isHandset$ | async) ? 'over' : 'side'"-->
     <mat-nav-list>
+      <a mat-list-item routerLink="/entreprises" href="#">
+        <span matBadge="1" matBadgeOverlap="false" matBadgeColor="accent">
+          Entreprise
+        </span>
+      </a>
       <a mat-list-item routerLink="/search" href="#">Search</a>
-      <a mat-list-item routerLink="/dataviz" href="#"><span matBadge="4" matBadgeOverlap="false" matBadgeColor="accent">Dataviz</span></a>
-      <a mat-list-item routerLink="/entreprise" href="#">Entreprise</a>
-      <a mat-list-item routerLink="/document" href="#">Documents</a>
+      <a mat-list-item routerLink="/dataviz" href="#">Dataviz</a>
+      
+      <a mat-list-item routerLink="/documents" href="#">Documents</a>
     </mat-nav-list>
     <button
         type="button"
