--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 @include mat-core();
 
 $primary: mat-palette($mat-blue-grey, 500);
-$accent:  mat-palette($mat-pink, 500, A200, A400);
+$accent:  mat-palette($mat-blue, 500, A200, A400);
 $warn:    mat-palette($mat-deep-orange, 500);
 
 $theme: mat-light-theme($primary, $accent, $warn);
@@ -18,3 +18,13 @@ body {
     font-weight: normal;
 }
 
+
+.mat-row:hover {
+	background-color: mat-color($accent,50);
+}
+
+
+.spinner-container mat-spinner {
+    margin: 130px auto 0 auto;
+    color: mat-color($accent,50);
+}
