--- a/src/app/entreprise-details/entreprise-details.component.html
+++ b/src/app/entreprise-details/entreprise-details.component.html
@@ -8,7 +8,7 @@
 				<mat-form-field>
 					<input 
 					matInput placeholder="Name" 
-					formControlName="entreprise" 
+					formControlName="entreprise"
 					id="entreprise"
 					class="form-control"
 					[readOnly]="!edit.entreprise"
@@ -63,15 +63,29 @@
 			</div>
 			-->
 			<div>
-				<label>Url: </label> {{ (entreprise | async)?.url}}
+				<label>Keywords</label>
+				<button mat-button aria-label="Add" (click)="addKeyword()">
+					<i class="material-icons">add</i>
+				</button>
+				<mat-list>
+					<!-- <mat-list-item *ngFor='let keyword of (entreprise |async)?.keywords; index as i'>
+						{{keyword}}
+					</mat-list-item> -->
+					<div formArrayName="keywords">
+						<mat-list-item  *ngFor="let keyword of keywords.controls; index as i">
+							<mat-form-field>
+								<input matInput placeholder="keyword" [formControlName]="i">
+							</mat-form-field>
+							<button mat-button aria-label="Remove" (click)="removeKeyword(i)">
+								<i class="material-icons">remove</i>
+							</button>
+						</mat-list-item>
+					</div>
+				</mat-list>
+				
 			</div>
 			<div>
-				<label>Keywords</label>
-				<mat-list>
-					<mat-list-item *ngFor='let keyword of (entreprise |async)?.keywords'>
-						{{keyword}}
-					</mat-list-item>
-				</mat-list>
+				<label>Url: </label><a rel="noopener noreferrer" target="_blank" href="http://{{ (entreprise | async)?.url}}">{{ (entreprise | async)?.url}}</a>
 			</div>
 			<mat-divider></mat-divider>
 		</mat-card-content>
