--- a/src/app/entreprise-list/entreprise-list.component.html
+++ b/src/app/entreprise-list/entreprise-list.component.html
@@ -8,7 +8,8 @@
 	<div class="spinner-container" *ngIf="loading$ | async">
         <mat-spinner></mat-spinner>
 	</div>
-	<table mat-table matSort matSortActive="entreprise" matSortDisableClear matSortDirection="asc" [dataSource]="dataSource">
+	<table mat-table matSort matSortActive="entreprise" matSortDisableClear matSortDirection="asc" [dataSource]="dataSource"
+	[hidden]="loading$ | async">
 		<!-- Edit Button -->
 		<ng-container matColumnDef="edit">
 			<th mat-header-cell *matHeaderCellDef>
