--- a/src/app/entreprise-list/entreprise-list.component.html
+++ b/src/app/entreprise-list/entreprise-list.component.html
@@ -15,7 +15,7 @@
 			<th mat-header-cell *matHeaderCellDef>
 			</th>
 			<td mat-cell *matCellDef="let row">
-				<button mat-button (click)="onViewButtonClick(row)" routerLink="/entreprises/{{row.key}}"aria-label="View">View</button>
+				<button mat-button (click)="onViewButtonClick(row)" routerLink="/entreprises/{{row.key}}"aria-label="View"><i class="material-icons">visibility</i></button>
 			</td>
 		</ng-container>
 		<!-- Name Column -->
