--- a/src/app/entreprise-list/entreprise-list.component.html
+++ b/src/app/entreprise-list/entreprise-list.component.html
@@ -8,7 +8,7 @@
 	<div class="spinner-container" *ngIf="loading$ | async">
         <mat-spinner></mat-spinner>
 	</div>
-	<table mat-table matSort matSortActive="entreprise" matSortDisableClear matSortDirection="asc" [dataSource]="dataSource"
+	<table mat-table matSort matSortActive="score" matSortDisableClear matSortDirection="desc" [dataSource]="dataSource"
 	[hidden]="loading$ | async">
 		<!-- Edit Button -->
 		<ng-container matColumnDef="edit">
@@ -17,6 +17,11 @@
 			<td mat-cell *matCellDef="let row">
 				<button mat-button (click)="onViewButtonClick(row)" routerLink="/entreprises/{{row.key}}"aria-label="View"><i class="material-icons">visibility</i></button>
 			</td>
+		</ng-container>
+		<!-- Score Column -->
+		<ng-container matColumnDef="score">
+			<th mat-header-cell *matHeaderCellDef mat-sort-header> Score </th>
+			<td mat-cell *matCellDef="let entreprise"> {{entreprise.score | number}} </td>
 		</ng-container>
 		<!-- Name Column -->
 		<ng-container matColumnDef="entreprise">
